Mer sonarrydding (#301)